Tests implementation